fix home page title being too small on big screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1247,6 +1247,10 @@ h5.pre-animate {
     font-size: 2.4rem;
   }
 
+  .section-title__title {
+    font-size: 2.1rem;
+  }
+
   .article-content {
     font-size: 1.4rem;
   }
